include_directories(
   ./
   #./external/
)

IF (${CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT})
    set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "Install directory" FORCE)
ENDIF()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(utilities)
#ADD_SUBDIRECTORY(external)

IF (ENABLE_PYTHON)
    ADD_SUBDIRECTORY(python)
ENDIF()
